<resources>
    <string name="app_name">MyBlog</string>
    <string name="title">My Blog</string>
    <string name="subtitle">My Personal Blog</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">No account yet ? Create one</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="name">Name</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="lb_terms">I accept terms &amp; conditions</string>
</resources>
