<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    tools:context=".auth.SignUp">

    <TextView

        android:id="@+id/lb_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/lb_subtitle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/subtitle"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:background="@android:color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_subtitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/text_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:text="@string/name"
                android:textSize="14sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:met_baseColor="#0056d3"
                app:met_errorColor="#ddaa00"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="false"
                app:met_floatingLabelText="Name"
                app:met_primaryColor="#982360"
                app:met_iconLeft="@drawable/round_person_white_24"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/text_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@string/email"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_Name"
                app:met_baseColor="#0056d3"
                app:met_errorColor="#ddaa00"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="false"
                app:met_floatingLabelText="@string/email"
                app:met_iconLeft="@drawable/round_email_white_24"
                app:met_primaryColor="#982360" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/text_Password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="Password"
                android:maxLength="10"
                android:password="true"

                android:text="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_Email"
                app:met_baseColor="@color/baseColor"
                app:met_errorColor="@color/errorColor"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="false"
                app:met_floatingLabelText="Password"
                app:met_iconLeft="@drawable/round_lock_white_24"
                app:met_maxCharacters="10"
                app:met_minCharacters="4"
                app:met_primaryColor="@color/colorPrimary" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/text_Confirm_Password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="Password Again"
                android:maxLength="10"
                android:password="true"

                android:text="@string/confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_Password"
                app:met_baseColor="@color/baseColor"
                app:met_errorColor="@color/errorColor"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="false"
                app:met_floatingLabelText="Password"
                app:met_iconLeft="@drawable/round_lock_white_24"
                app:met_maxCharacters="10"
                app:met_minCharacters="4"
                app:met_primaryColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/lb_terms"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_Confirm_Password" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/terms" />

            <TextView
                android:id="@+id/lb_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/terms"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/terms" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>